Fix: btn classes for the Install link were not showing a path for the user, now we use Primary to lead the user to install the OS. Fixes in all the btn classes

--- a/assets/css/buttons.less
+++ b/assets/css/buttons.less
@@ -4,7 +4,7 @@
   margin-top: 50px;
 }
 
-.btn-primary {
+.btn-default {
   border: 1px solid @opensuse-green;
   background: transparent;
   color: @opensuse-green;
@@ -14,12 +14,50 @@
     color: #fff;
   }
 }
-#more-information-os .btn-primary {
+#more-information-os .btn-default {
   border-color: #fff;
   color: #fff;
   &:hover {
     background: @opensuse-blue;
     border-color: @opensuse-blue;
+  }
+}
+
+.btn-primary {
+  border: 1px solid @opensuse-green;
+  background: @opensuse-green;
+  color: @opensuse-blue;
+  &:hover {
+    background: @opensuse-light-green;
+    border: 1px solid @opensuse-light-green;
+    color: #fff;
+  }
+}
+#more-information-os .btn-primary {
+  border-color: #fff;
+  background: #fff;
+  color: @gray;
+  &:hover {
+    background: @opensuse-blue;
+    border-color: @opensuse-blue;
+    color: #fff;
+    i.fa {
+      color: #fff
+    }
+  }
+}
+
+#more-information-os {
+  .btn {
+     i {
+      font-size: 1em;
+      margin-right: .6em;
+    }
+    &.btn-primary {
+      i {
+        color: @gray
+      }
+    }
   }
 }
 
@@ -30,6 +68,15 @@
     color: @opensuse-blue
   }
 }
+
+.btn.btn-default.dropdown-toggle {
+  border-color: @gray-light;
+  color: @gray-light;
+  &:hover {
+    background: @gray-lighter
+  }
+}
+
 .go-to-top {
   background: rgba(255, 255, 255, 0.5);
   border-radius: 4px;
