--- a/assets/css/sections.less
+++ b/assets/css/sections.less
@@ -81,9 +81,6 @@
     p {
       font-size: 1.3em
     }
-    .btn i {
-      font-size: 1em;
-    }
   }
 }
 
